# sonos-scrobbler

./: .env.example  .gitignore  .mise.toml  Cargo.toml  README.md  plan.md
src/: device_manager.rs  discovery.rs  lastfm.rs  lib.rs  main.rs  sonos.rs
src/sonos/: database.rs  discovery.rs  events.rs  mod.rs
