[package]
name = "sonos_scrobbler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
ssdp-client = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures-util = "0.3"
url = "2.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
