[package]
name = "sonos_scrobbler"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
mockito = "1.2"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rusty-sonos = "0.1"
reqwest = "0.11"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
