[package]
name = "sonos_scrobbler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
mockall = "0.11"
anyhow = "1.0"
log = "0.4"
rusty-sonos = "0.1"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
dotenv = "0.15"
mockito = "1.2"
rustfm-scrobble = "1.1"
thiserror = "1.0"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
rusty-sonos = "0.1"
reqwest = { version = "0.11", features = ["json"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio-util = "0.7"
